--- a/css/payment.css
+++ b/css/payment.css
@@ -1,87 +1,93 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Poppims', sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Poppims", sans-serif;
+}
+
+span {
+  color: #403937;
+  font-weight: 400;
+  line-height: 130%;
 }
 
 .container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 100px;
-    padding: 25px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100px;
+  padding: 25px;
 }
 
 .container form {
-    width: 700px;
-    padding: 40px;
-    background: #fff;
-    border-radius: 10px;
+  width: 700px;
+  padding: 40px;
+  background: #f4e1e1;
+  border-radius: 10px;
 }
 
 form .row {
-    display: flex;
-    gap: 15px;
-    flex-wrap: wrap;
+  display: flex;
+  gap: 15px;
+  flex-wrap: wrap;
 }
 
 .row .cloumn {
-    flex: 1 1 250px;
+  flex: 1 1 250px;
 }
 
 .column .title {
-    font-size: 20px;
-    color: #333;
-    text-transform: uppercase;
-    margin-bottom: 5px;
+  font-size: 20px;
+  color: #520a1d;
+  text-transform: uppercase;
+  margin-bottom: 5px;
 }
 
 .column .input-box {
-    margin: 15px 0;
+  margin: 15px 0;
 }
 
 .input-box span {
-    display: block;
-    margin-bottom: 10px;
+  display: block;
+  margin-bottom: 10px;
 }
 
 .input-box input {
-    width: 100%;
-    padding: 10px 15px;
-    border: 1px solid #ccc;
-    border-radius: 6px;
-    font-size: 15px;
+  width: 100%;
+  padding: 10px 15px;
+  border: 1px solid #d85273;
+  border-radius: 6px;
+  font-size: 15px;
 }
 
 .column .flex {
-    display: flex;
-    gap: 15px;
+  display: flex;
+  gap: 15px;
 }
 
 .flex .input-box {
-    margin-top: 5px;
+  margin-top: 5px;
 }
 
 .input-box img {
-    height: 34px;
-    margin-top: 5px;
-    filter: drop-shadow(0 0 1px #000);
+  height: 34px;
+  margin-top: 5px;
+  filter: drop-shadow(0 0 1px #520a1d);
 }
 
 form .btn {
-    width: 100%;
-    padding: 12px;
-    background: #8175d3;
-    border: none;
-    outline: none;
-    border-radius: 6px;
-    font-size: 17;
-    color: #fff;
-    margin-top: 5px;
-    cursor: pointer;
+  width: 100%;
+  padding: 12px;
+  background: #d85273;
+  border: none;
+  outline: none;
+  border-radius: 6px;
+  font-size: 17;
+  color: #fff;
+  margin-top: 5px;
+  cursor: pointer;
 }
 
 form .btn:hover {
-    background: #6a5acd;
+  background: #a45065;
 }
