--- a/css/home.css
+++ b/css/home.css
@@ -114,13 +114,14 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
   box-sizing: border-box;
 
   background-color: #f4e1e1;
   border-radius: 6px 36px 6px 36px;
 
   width: 15rem;
+  min-height: 20rem;
   padding: 1.25rem;
   padding-top: 0;
   text-align: center;
