--- a/css/home.css
+++ b/css/home.css
@@ -8,11 +8,6 @@
   height: 100vh;
 }
 
-.title {
-  color: #333;
-  font-size: 2em;
-}
-
 .intro-container {
   display: flex;
   align-items: center;
@@ -43,12 +38,6 @@
   color: #520a1d;
   margin-bottom: 1rem;
   font-size: 2.2rem;
-}
-
-.regular-text {
-  color: #403937;
-  font-weight: 400;
-  line-height: 130%;
 }
 
 .infos-container {
@@ -147,6 +136,7 @@
 }
 
 .menu-item-cart-button {
+  color: #ffffff;
   background-color: #d85273;
   border: none;
   border-radius: 10%;
@@ -155,6 +145,7 @@
 
 .menu-item-cart-button:hover {
   background-color: #a45065;
+  cursor: pointer;
 }
 
 @media (max-width: 1100px) {
