--- a/css/common.css
+++ b/css/common.css
@@ -1,5 +1,41 @@
 .regular-text {
   color: #403937;
+  font-size: 1rem;
   font-weight: 400;
   line-height: 130%;
+}
+
+.title {
+  color: #520a1d;
+  font-size: 2.2rem;
+  margin: 1rem 0;
+}
+
+.session-title {
+  color: #520a1d;
+  font-size: 1.75rem;
+  margin-bottom: 1rem;
+}
+
+.session-subtitle {
+  color: #520a1d;
+  font-size: 1.4rem;
+  margin: 1rem 0;
+}
+
+@media (max-width: 850px) {
+  .title {
+    font-size: 1.8rem;
+    text-align: center;
+  }
+
+  .session-title {
+    font-size: 1.5rem;
+  }
+
+  .session-subtitle {
+    color: #520a1d;
+    font-size: 1.2rem;
+    margin: 1rem 0;
+  }
 }
