--- a/css/about.css
+++ b/css/about.css
@@ -1,67 +1,38 @@
-body {
-    font-family: Arial, sans-serif;
-    line-height: 1.6;
-    background-color: #f4e1e1;
-    color: #403937;
-    padding: 20px;
-}
-
 main {
-    max-width: 900px;
-    margin: 0 auto;
-    background-color: #f4e1e1;
-    padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+
+  max-width: 64rem;
+  margin: 2rem auto;
+  padding: 1rem;
 }
 
-h2 {
-    font-size: 2em;
-    color: #520a1d;
-    text-align: center;
-    margin-bottom: 10px;
+.title {
+    align-self: flex-start;
 }
 
-h3 {
-    font-size: 1.5em;
-    color: #520a1d;
-    margin-top: 20px;
-    margin-bottom: 15px;
-}
-
-h4 {
-    font-size: 1.2em;
-    color: #520a1d;
-    margin-top: 10px;
-    margin-bottom: 5px;
-}
-
-p {
-    margin-bottom: 15px;
-    line-height: 1.6;
+.regular-text {
+  text-align: justify;
+  padding-bottom: 1rem;
 }
 
 section {
-    margin-bottom: 20px;
-}
-
-section > h3 {
-    text-align: center;
-    margin-bottom: 20px;
-}
-
-.founders {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    gap: 20px;
+  margin-bottom: 20px;
 }
 
 .founder-pics {
-    display: flex;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  gap: 1rem;
 }
 
 .founder-pics img {
-    width: 100px;
-    height: 100px;
+  width: 100px;
+  height: 100px;
+
+  border-radius: 100%;
 }
