--- a/css/checkout.css
+++ b/css/checkout.css
@@ -1,11 +1,6 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
 label {
   color: #403937;
+  font-size: 1rem;
   font-weight: 400;
   line-height: 130%;
 }
@@ -14,33 +9,23 @@ label {
   display: flex;
   justify-content: center;
   align-items: center;
+
   min-height: 100px;
-  padding: 2rem;
+  padding: 4rem 2rem 2rem 2rem;
 }
 
 .container form {
   width: 40rem;
   padding: 2rem;
+
   background: #f4e1e1;
   border-radius: 6px 44px 6px 44px;
 }
 
 form .row {
   display: flex;
-  justify-content: space-around;
-  gap: 5px;
-  flex-wrap: wrap;
-}
 
-.row .cloumn {
-  flex: 1 1 250px;
-}
-
-.column .title {
-  font-size: 1.3rem;
-  color: #520a1d;
-  text-transform: uppercase;
-  margin-bottom: 5px;
+  gap: 2.5rem;
 }
 
 .column .input-box {
@@ -55,8 +40,10 @@ form .row {
 .input-box input {
   width: 100%;
   padding: 10px 15px;
+
   border: 1px solid #d85273;
   border-radius: 6px;
+
   font-size: 15px;
 }
 
@@ -76,16 +63,17 @@ form .row {
 }
 
 form .btn {
-  width: 100%;
-  padding: 12px;
   background: #d85273;
   border: none;
-  outline: none;
   border-radius: 6px;
-  font-size: 17;
+
   color: #fff;
-  margin-top: 5px;
   cursor: pointer;
+  outline: none;
+
+  width: 100%;
+  padding: 0.75rem;
+  margin-top: 2rem;
 }
 
 form .btn:hover {
