--- a/css/confirmation.css
+++ b/css/confirmation.css
@@ -4,7 +4,7 @@
   justify-content: center;
 
   min-height: 10rem;
-  padding: 2rem;
+  padding: 4rem 2rem 2rem 2rem;
 }
 
 .confirmation-title {
@@ -40,7 +40,8 @@
 
 .confirmation-button {
   color: #ffffff;
-  font-size: 17;
+  font-weight: 400;
+  line-height: 130%;
 
   background: #d85273;
   border: none;
