--- a/css/contact.css
+++ b/css/contact.css
@@ -1,79 +1,65 @@
-body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    background-color: #fff5f7;      
-}
-
-
-.contact-container {
-    background: #f4e1e1;
-    padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    max-width: 600px;
-    margin: 40px auto;
-    width: 90%;
-    color: #f4e1e1;
-}
-
-
-h1 {
-    margin-bottom: 20px;
-    font-size: 24px;
-    color: #d85273;
-}
-
-
-p {
-    margin: 0 0 10px;
-    font-size: 16px;
-    color: #d85273;
-}
-
-
-.form-group {
-    margin-bottom: 15px;
-}
-
-
-label {
-    display: block;
-    margin-bottom: 5px;
-    font-weight: bold;
-    color: #d85273;
-}
-
-
 input[type="text"],
 input[type="email"],
 textarea {
-    width: 100%;
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    box-sizing: border-box;
+  font-size: 15px;
+
+  border: 1px solid #d85273;
+  border-radius: 6px;
+
+  width: 100%;
+  padding: 10px 15px;
 }
 
+.contact-container {
+  background-color: #f4e1e1;
+  border-radius: 6px 44px 6px 44px;
 
-textarea {
-    resize: vertical;
-    height: 100px;
+  width: 90%;
+  padding: 2rem;
+  max-width: 37.5rem;
+  margin: 4rem auto 2rem auto;
 }
 
-
-button {
-    background-color: #007bff;
-    color: #fff;
-    border: none;
-    padding: 10px 20px;
-    border-radius: 4px;
-    cursor: pointer;
-    font-size: 16px;
+.title {
+  margin: 0;
 }
 
-
-button:hover {
-    background-color: #0056b3;
+.regular-text {
+  margin: 0 0 10px;
 }
 
+.form-group {
+  margin-bottom: 15px;
+}
+
+.form-group label {
+  display: block;
+
+  color: #520a1d;
+  font-weight: bold;
+
+  margin-bottom: 5px;
+}
+
+.form-group textarea {
+  resize: vertical;
+  height: 100px;
+}
+
+.contact-button {
+  color: #ffffff;
+  font-weight: 400;
+  line-height: 130%;
+
+  background: #d85273;
+  border: none;
+  border-radius: 6px;
+
+  width: 100%;
+  padding: 0.75rem;
+}
+
+.contact-button:hover {
+  background-color: #a45065;
+  cursor: pointer;
+}
