--- a/css/events.css
+++ b/css/events.css
@@ -1,89 +1,49 @@
-body {
-    font-family: Arial, sans-serif;
-    line-height: 1.6;
-    color: #520a1d;
-    background-color: #f4e1e1;
-}
-
 main {
-    padding: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+
+  max-width: 64rem;
+  margin: 2rem auto;
+  padding: 1rem;
 }
 
-h1 {
-    font-size: 2.5rem;
-    color: #520a1d;
-    margin-bottom: 20px;
-}
-
-section {
-    margin-bottom: 40px;
-}
-
-h2 {
-    font-size: 2rem;
-    color: #520a1d;
-    margin-bottom: 10px;
-}
-
-h3 {
-    font-size: 1.5rem;
-    color: #520a1d;
-    margin-bottom: 10px;
-}
-
-p {
-    margin-bottom: 10px;
-}
-
-.offerings {
-    margin-top: 20px;
-}
-
-.offerings h3 {
-    margin-top: 20px;
-}
-
-#contact-us {
-    background: #f4e1e1;
-    padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-}
-
-#contact-us p {
-    margin-bottom: 15px;
+.regular-text {
+  text-align: justify;
+  padding-bottom: 1rem;
 }
 
 .dessert-box-details {
-    display: flex;
+  display: flex;
+  align-items: center;
+
+  gap: 1rem;
 }
 
-.dessert-box-images img {
-    width: 100px;
-    height: 100px;
-}
+.dessert-box-image img {
+  padding: 1rem;
+  background-color: #f4e1e1;
+  border-radius: 6px 44px 6px 44px;
 
-.gallery {
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    flex-direction: column;
-    row-gap: 2rem;
-    column-gap: 2.5rem;
+  width: 200px;
+  height: 200px;
 }
 
 .gallery-items {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    width: 15rem;
-    min-height: 20rem;
-    padding-top: 0;
-    gap: 1rem;
-    text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+
+  gap: 0.5rem;
 }
 
 .gallery-items img {
-    width: 200px;
-    height: 200px;
+  padding: 1rem;
+  background-color: #f4e1e1;
+  border-radius: 5px;
+
+  width: 200px;
+  height: 200px;
 }
