--- a/css/blog.css
+++ b/css/blog.css
@@ -1,15 +1,29 @@
+main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 
-h1 {
-    color: #520a1d;
-    border-bottom: 2px solid;
-    padding-bottom: 10px;
-    margin-bottom: 20px;
+  max-width: 64rem;
+  margin: 2rem auto;
+  padding: 1rem;
 }
 
-h2 {
-    color: #520a1d;
-    margin-top: 0;
+ul,
+ol {
+  margin-left: 2rem;
 }
 
-/* .date {
-    font-style: italic; */
+.regular-text {
+  text-align: justify;
+  padding-bottom: 1rem;
+}
+
+.date {
+  font-style: italic;
+}
+
+.notes {
+    color: #520a1d;
+    font-weight: bold;
+}
