--- a/css/blog.css
+++ b/css/blog.css
@@ -14,6 +14,10 @@ ol {
   margin-left: 2rem;
 }
 
+.title {
+  align-self: flex-start;
+}
+
 .regular-text {
   text-align: justify;
   padding-bottom: 1rem;
